--- a/test/fixtures/daywise_infos.yml
+++ b/test/fixtures/daywise_infos.yml
@@ -1,9 +1,19 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  t_date: 2021-04-21
-  status: MyString
+  id: 1
+  t_date: <%= Date.today - 8.day %>
+  status: PHP
+  patient_id: 1
 
 two:
-  t_date: 2021-04-21
-  status: MyString
+  id: 2
+  t_date: <%= Date.today - 7.day %>
+  status: PHP
+  patient_id: 1
+
+three:
+  id: 3
+  t_date: <%= Date.today - 7.day %>
+  status: ''
+  patient_id: 1
