--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,8 +4,11 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
+user_1: 
+  id: 1
+  email: test@gmail.com
+  encrypted_password: <%= User.new.send(:password_digest, '123456') %>
+  company_id: 1
 #
 two: {}
 # column: value
