added last updated at and the login to check everyday

--- a/test/fixtures/companies.yml
+++ b/test/fixtures/companies.yml
@@ -3,9 +3,9 @@
 one:
   id: 1
   name: Company_1
-  is_updated: false
+  last_updated_at: <%= DateTime.now - 7.day %>
 
 two:
   id: 2
   name: Company_2
-  is_updated: false
+  last_updated_at: <%= DateTime.now - 7.day %>
