--- a/test/fixtures/loc_service_dds.yml
+++ b/test/fixtures/loc_service_dds.yml
@@ -1,7 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
+  loc: MyString
+  service: MyString
 
 two:
-  name: MyString
+  loc: MyString
+  service: MyString
