--- a/config/local_env.yml
+++ b/config/local_env.yml
@@ -13,5 +13,5 @@ test:
 production:
   SMTP_USER_EMAIL: "noreply.icbd@gmail.com"
   SMTP_USER_PASSWORD: "icbdnewpassword"
-  DATABASE_USERNAME: "postgres"
-  DATABASE_PASSWORD: "postgres"
+  DATABASE_USERNAME: "rails_dev"
+  DATABASE_PASSWORD: "aqwe123"
